--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
+    "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.1",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/input": "^2.2.5",
@@ -23,7 +24,8 @@
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
