--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nextui-org/theme": "^2.2.11",
     "axios": "^1.7.7",
     "drizzle-orm": "^0.36.0",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.11.9",
     "next": "15.0.1",
     "react": "^18.3.1",
